tests/transpiler/x/ocaml/cross_join_triple.error
exit status 2
File "/workspace/mochi/tests/transpiler/x/ocaml/cross_join_triple.ml", line 11, characters 100-101:
11 |   print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "n" c)); (List.assoc "l" c); (List.assoc "b" c)]));
                                                                                                         ^
Error: Syntax error: ']' expected
File "/workspace/mochi/tests/transpiler/x/ocaml/cross_join_triple.ml", line 11, characters 67-68:
11 |   print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (List.assoc "n" c)); (List.assoc "l" c); (List.assoc "b" c)]));
                                                                        ^
  This '[' might be unmatched
